# mediapi

./: BLUETOOTH_SYSTEMD.md  LCD_1in44.py  MODULAR_ARCHITECTURE.md  README.md  SYSTEMD_SETUP.md  api_clients.py  app_config.py  audio.py  bluetooth.py  config.py  dep-install.sh  display.py  input.py  install.sh  local_library.py  mediapi.service  player.py  pyproject.toml  server.py  setup-splash.sh  storage.py  test_components.py  utils.py
install/: dep-install.sh  install.sh
templates/: index.html
